--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,8 @@ anyhow = "1.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 chrono = "0.4"
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+dotenvy = "0.15"
 
 [profile.release]
 opt-level = 3
